--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools">
 
+  <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
   <application
     android:name=".TimeManagementApp"
     android:allowBackup="true"
@@ -13,14 +16,16 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.TimeManagementApp"
     tools:targetApi="31">
+    <service
+      android:name=".data.services.SessionService"
+      android:enabled="true"
+      android:exported="false" />
     <activity
       android:name=".MainActivity"
       android:exported="true"
-      android:label="@string/app_name"
       android:theme="@style/Theme.TimeManagementApp">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
