--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools">
 
+  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
@@ -9,15 +10,31 @@
     android:name=".TimeManagementApp"
     android:allowBackup="true"
     android:dataExtractionRules="@xml/data_extraction_rules"
+    android:enableOnBackInvokedCallback="true"
     android:fullBackupContent="@xml/backup_rules"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.TimeManagementApp"
-    tools:targetApi="31">
+    tools:targetApi="33">
+    <!--    Timer Service-->
     <service
       android:name=".data.services.SessionService"
+      android:enabled="true"
+      android:exported="false" />
+    <!--    Boot Receiver-->
+    <receiver
+      android:name=".data.receiver.BootReceiver"
+      android:enabled="true"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.BOOT_COMPLETED" />
+      </intent-filter>
+    </receiver>
+    <!--    Reminder Receiver-->
+    <receiver
+      android:name=".data.receiver.DailyGoalReminderReceiver"
       android:enabled="true"
       android:exported="false" />
     <activity
@@ -31,5 +48,4 @@
       </intent-filter>
     </activity>
   </application>
-
 </manifest>
