--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
 
   <application
     android:name=".TimeManagementApp"
@@ -22,7 +23,12 @@
     <service
       android:name=".data.services.SessionService"
       android:enabled="true"
-      android:exported="false" />
+      android:exported="false"
+      android:foregroundServiceType="specialUse">
+      <property
+        android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+        android:value="@string/special_use_case_fro_fgs" />
+    </service>
     <!--    Boot Receiver-->
     <receiver
       android:name=".data.receiver.BootReceiver"
