Window inserts set to fill the whole windows including bars. Removed MDC material3 dependency. Steps followed to control the inserts of the parts without changing much of the Ui. themes.xml  and colors.xml is corrected to provide the splash screen via splash api.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.TimeManagementApp"
+    android:theme="@style/Theme.App.Starting"
     tools:targetApi="33">
     <!--    Timer Service-->
     <service
@@ -47,7 +47,7 @@
       android:name=".MainActivity"
       android:exported="true"
       android:launchMode="singleTop"
-      android:theme="@style/Theme.TimeManagementApp">
+      android:theme="@style/Theme.App.Starting">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
